--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+/*
+ * Copyright (c) 2019 Yifan(Erik) Zuo.  All rights reserved.
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
