--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,7 @@
+#
+# Copyright (c) 2019 Yifan(Erik) Zuo.  All rights reserved.
+#
+
 #Fri May 17 00:52:14 AEST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
