Setting up modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,5 @@
  * Copyright (c) 2019 Yifan(Erik) Zuo.  All rights reserved.
  */
 
-include ':app'
+include ':app', ':core', ':market'
 rootProject.name='BTCMarket'
